[Develope].[Customer].[comment]:customer comments part is compeleted

--- a/App.EndPoints.MvcUi/Views/Customer/OrderDetails.cshtml
+++ b/App.EndPoints.MvcUi/Views/Customer/OrderDetails.cshtml
@@ -60,8 +60,8 @@
                                                 
                                                 <span class="tbl-btn">
                                                     <a class="btn btn-lg btn-success"
-                                                       asp-controller="Customer"
-                                                       asp-action="CreateComent" asp-route-orderItemId=""> ثبت نظر </a>
+                                                       asp-controller="Comment"
+                                                       asp-action="CreateComment" asp-route-orderItemId="@item.OrderItemId"> ثبت نظر </a>
                                                 </span>
                                             </td>
                                         </tr>
