--- a/App.EndPoints.MvcUi/Views/Shared/Components/CustomerPanelSidebar/Default.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/Components/CustomerPanelSidebar/Default.cshtml
@@ -7,8 +7,8 @@
                 <li><a asp-controller="Customer" asp-action="Index">تاریخچه</a></li>
 @*                <li><a href="cart.html">سبد خرید</a></li>*@
                 <li><a asp-controller="Customer" asp-action="Index"> افزایش موجودی</a></li>
-@*                <li><a href="track-order.html">پیگیری سفارش</a></li>
-                <li><a href="user-invoice.html">فاکتور</a></li>*@
+                <li><a asp-controller="Comment" asp-action="GetAll"> نظرات من</a></li>
+                @*<li><a href="user-invoice.html">فاکتور</a></li>*@
             </ul>
         </div>
     </div>
