--- a/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Identity
 @using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @using App.EndPoints.MvcUi.Models._Customer;
+@using App.EndPoints.MvcUi.Models._Comment;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
