--- a/App.EndPoints.MvcUi/Views/Home/Index.cshtml
+++ b/App.EndPoints.MvcUi/Views/Home/Index.cshtml
@@ -19,8 +19,8 @@
             <div class="ec-spe-section col-lg-12 col-md-12 col-sm-12 sectopn-spc-mb">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <a href="product-left-sidebar.html">
-                        <h2 class="ec-title">پیشنهاد ویژه </h2>
+                        <a asp-controller="Home" asp-action="GetAuctions">
+                        <h2 class="ec-title mx-10">پیشنهاد ویژه </h2>
                         </a>
                     </div>
                 </div>
@@ -40,20 +40,11 @@
                                     </div>
                                 </div>
                                 <div class="ec-spe-pro-content col-md-6 col-sm-12 mx-1">
-                                    <div class="ec-spe-pro-rating">
-                                        <span class="ec-spe-rating-icon">
-                                            <i class="ecicon eci-star fill"></i>
-                                            <i class="ecicon eci-star fill"></i>
-                                            <i class="ecicon eci-star fill"></i>
-                                            <i class="ecicon eci-star"></i>
-                                            <i class="ecicon eci-star"></i>
-                                        </span>
-                                    </div>
-                                    <h5 class="ec-spe-pro-title">
-                                        <a href="product-left-sidebar.html">
+
+                                    <h3 class="ec-spe-pro-title">
+
                                             @item.ProductDto.Name
-                                        </a>
-                                    </h5>
+                                     </h3>
                                     <div class="ec-spe-pro-desc">
                                             @item.ProductDto.Description
                                     </div>
@@ -82,7 +73,7 @@
                                         <span class="ec-spe-count-desc">
                                             عجله کن! پیشنهاد به پایان می رسد در:
                                         </span>
-                                        <span id="ec-spe-count-1"></span>
+                                        <span id="ec-spe-count-3"></span>
                                     </div>
                                 </div>
                             </div>
@@ -90,58 +81,6 @@
                         <!---  مزایده اول --->
                     }
 
-                    <!---  مزایده دوم --->
-                    <div class="ec-spe-product">
-                        <div class="ec-spe-pro-inner">
-                            <div class="ec-spe-pro-image-outer col-md-6 col-sm-12">
-                                <div class="ec-spe-pro-image">
-                                    <img class="img-responsive"
-                                         src="assets/Home/images/product-image/110_1.jpg"
-                                         alt="" />
-                                </div>
-                            </div>
-                            <div class="ec-spe-pro-content col-md-6 col-sm-12">
-                                <div class="ec-spe-pro-rating">
-                                    <span class="ec-spe-rating-icon">
-                                        <i class="ecicon eci-star fill"></i>
-                                        <i class="ecicon eci-star fill"></i>
-                                        <i class="ecicon eci-star fill"></i>
-                                        <i class="ecicon eci-star"></i>
-                                        <i class="ecicon eci-star"></i>
-                                    </span>
-                                </div>
-                                <h5 class="ec-spe-pro-title">
-                                    <a href="product-left-sidebar.html">شامپو ، نرم کننده مو و فیس واش</a>
-                                </h5>
-                                <div class="ec-spe-pro-desc">
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ
-                                    و با استفاده از طراحان گرافیک است.
-                                </div>
-                                <div class="ec-spe-price">
-                                    <span class="new-price">15000 تومان</span>
-                                    <span class="old-price">20000 تومان</span>
-                                </div>
-                                <div class="ec-spe-pro-btn">
-                                    <a href="#" class="btn btn-lg btn-primary">
-                                        افزودن به سبد خرید
-                                    </a>
-                                </div>
-                                <div class="ec-spe-pro-progress">
-                                    <span class="ec-spe-pro-progress-desc">
-                                        <span> فروخته شده: <b>20</b></span><span>موجودی: <b>40</b></span>
-                                    </span>
-                                    <span class="ec-spe-pro-progressbar"></span>
-                                </div>
-                                <div class="countdowntimer">
-                                    <span class="ec-spe-count-desc">
-                                        عجله کن! پیشنهاد به پایان می رسد در:
-                                    </span>
-                                    <span id="ec-spe-count-2"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!---  مزایده دوم --->
                 
                 </div>
             </div>
