--- a/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
@@ -8,4 +8,6 @@
 @using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @using App.EndPoints.MvcUi.Models._Customer;
 @using App.EndPoints.MvcUi.Models._Comment;
+@using App.EndPoints.MvcUi.Models._Auctions;
+@using App.EndPoints.MvcUi.Models._Bid;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
