[Develop].[Customer].[Auction/Bids]:Customer can see the result of Auctions in panel and can remove her bids from Active Auction

--- a/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
@@ -1,13 +1,14 @@
-﻿@using App.EndPoints.MvcUi;
+﻿@using App.Domain.Core._Booth.Dtos.BoothDtos;
+@using App.Domain.Core._User.Entities;
+@using App.Domain.Core._Products.Enums;
+@using App.Domain.Core._Common.Dtos.AppSettingDtos;
+@using App.EndPoints.MvcUi;
 @using App.EndPoints.MvcUi.Models;
 @using App.EndPoints.MvcUi.Models.Authenticate;
 @using App.EndPoints.MvcUi.Models.Home;
-@using App.Domain.Core._Booth.Dtos.BoothDtos;
-@using App.Domain.Core._User.Entities;
-@using Microsoft.AspNetCore.Identity
-@using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @using App.EndPoints.MvcUi.Models._Customer;
 @using App.EndPoints.MvcUi.Models._Comment;
 @using App.EndPoints.MvcUi.Models._Auctions;
 @using App.EndPoints.MvcUi.Models._Bid;
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
