--- a/App.EndPoints.MvcUi/Views/Shared/Components/CustomerPanelSidebar/Default.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/Components/CustomerPanelSidebar/Default.cshtml
@@ -5,10 +5,10 @@
             <ul>
                 <li><a asp-controller="Customer" asp-action="Profile">پروفایل کاربر</a></li>
                 <li><a asp-controller="Customer" asp-action="Index">تاریخچه</a></li>
-@*                <li><a href="cart.html">سبد خرید</a></li>*@
+                @* <li><a href="cart.html">سبد خرید</a></li>*@
                 <li><a asp-controller="Customer" asp-action="Index"> افزایش موجودی</a></li>
                 <li><a asp-controller="Comment" asp-action="GetAll"> نظرات من</a></li>
-                @*<li><a href="user-invoice.html">فاکتور</a></li>*@
+                <li><a asp-controller="Customer" asp-action="AllAuctions">مزایده ها</a></li>
             </ul>
         </div>
     </div>
