[Debug].[Customer].[Cart]:The customer can remove a product from the shopping cart, after paying the shopping cart, the booth medal can be changed under the influence of the total sales amount of the booth.

--- a/App.EndPoints.MvcUi/Views/Customer/AllAuctions.cshtml
+++ b/App.EndPoints.MvcUi/Views/Customer/AllAuctions.cshtml
@@ -23,7 +23,7 @@
                 <!--مزایده های فعال-->
                 <div class="ec-vendor-dashboard-card mt-2">
                     <div class="ec-vendor-card-header">
-                        <h5>نتایح مزایده ها</h5>
+                        <h5> پیشنهادهای ثبت شده</h5>
                     </div>
                     <div class="ec-vendor-card-body">
                         <div class="ec-vendor-card-table">
@@ -55,7 +55,7 @@
                                                          alt="product image">
                                                 </td>
                                                 <td><span>@item.ProductDto.Name</span></td>
-                                                <td><span>@item.Bids.FirstOrDefault().BidPrice</span></td>
+                                                <td><span>@item.Bids.FirstOrDefault().BidPrice تومان</span></td>
 
                                                 <td>
                                                     <span class="tbl-btn">
