--- a/App.EndPoints.MvcUi/Views/Home/Index.cshtml
+++ b/App.EndPoints.MvcUi/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
                                     }
 
                                     <div class="ec-spe-pro-btn">
-                                        <a href="#" class="btn btn-lg btn-primary">
+                                        <a asp-controller="CustomerBid" asp-action="Create" asp-route-auctionId="@item.Id" class="btn btn-lg btn-primary">
                                             ارسال پیشنهاد
                                         </a>
                                     </div>
