--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Shared/_Layout.cshtml
@@ -691,7 +691,7 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <div class="row">
-                        @await Component.InvokeAsync("EditSellerProfile",new {SellerAppUserId = @ViewBag.SellerAppUserId})
+                        @await Component.InvokeAsync("EditSellerProfile")
                     </div>
                 </div>
             </div>
