--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
@@ -1,11 +1,14 @@
-﻿@using App.EndPoints.MvcUi
+﻿@using App.Domain.Core._Common.Dtos.AppSettingDtos;
+@using App.Domain.Core._User.Entities;
+@using App.EndPoints.MvcUi
 @using App.EndPoints.MvcUi.Models
 @using App.EndPoints.MvcUi.Models.Authenticate;
 @using App.EndPoints.MvcUi.Models.Home;
-@using App.Domain.Core._User.Entities;
-@using Microsoft.AspNetCore.Identity;
 @using App.EndPoints.MvcUi.Areas.SellerArea.Models.SellerViewModels;
 @using App.EndPoints.MvcUi.Areas.SellerArea.Models.ProductViewModels;
 @using App.EndPoints.MvcUi.Areas.SellerArea.Models.BoothViewModels;
-@using App.Domain.Core._Common.Dtos.AppSettingDtos;
+@using App.EndPoints.MvcUi.Areas.SellerArea.Models.BoothProductViewModels;
+@using App.EndPoints.MvcUi.Areas.SellerArea.Models.AuctionViewModels;
+
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
