--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
@@ -143,7 +143,7 @@
                             </div>
                         </li>
                         <li>
-                            <a class="sidenav-item-link" href="review-list.html">
+                            <a class="sidenav-item-link" asp-controller="comment" asp-action="Index">
                                 <i class="mdi mdi-star-half"></i> <span class="nav-text">نظرات</span>
                             </a>
                         </li>
