--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using App.EndPoints.MvcUi.Models
 @using App.EndPoints.MvcUi.Models.Authenticate;
 @using App.EndPoints.MvcUi.Models.Home;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Comments;
 @using App.Domain.Core._User.Entities;
+
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
